--- a/style.css
+++ b/style.css
@@ -9,24 +9,29 @@ header{
 }
 
 body{
-    background-color: #F1DEC3;
+    background-color: #F7F1E5;
+    
 }
 
 
 .box{
    
-    height:800px; 
+    height:100%; 
     width: 50%;
-    background-color: rgb(247, 247, 247);
+    background-image: linear-gradient(45deg, #FC2947, #f38a3e );;
     align-items: center;
     position: fixed;
+    display: table;
+    margin-top: -10px;
+    margin-bottom: -5px;
+    
     
     
     
 
 }
 input{
-    color: slategray;
+    color: #000;
     background-color: aliceblue;
     font-size: 20px;
     text-align: 10px ;
@@ -35,7 +40,7 @@ input{
     margin-top: 50px;
     margin-left: center;
     align-items: center;
-    ;
+    position: relative;
     
 
 
@@ -44,46 +49,69 @@ input{
 
 
 .cadastro{
-    background-color: #F4B97A;
-    font-size: 50px;
-    text-align: center;
-    height: 450px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 30px;
-    width: 90%;
-    margin-top: 5%;
-    
-    
+        background-color: #F7F1E5;
+        font-size: 5vh;
+        text-align: center;
+        height: 500px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 30px;
+        width: 90%;
+        margin-top: 5%;
+        border-color: #777777;
+        border-style:solid;
+        box-sizing: border-box;
+        box-shadow: 0 0 1rem rgb(255, 255, 255);
+        
+    }
 
-}
 
 
-button{font-size: 20px;
-background-color: #AEB37F;
+button{
+margin-top: 30px;
+font-size: 20px;
+background-color: #f18241;;
 border-radius: 10px;
 height: 30px;
 width: 90px;
+border: none;
+cursor: pointer;
 }
 
+button:hover{
+    background-color: #F97B22;
+}
+button:active{
+    opacity: 0.7;
+}
 
 a{
-    font-size: 20px;
+    color: black;
+    font-size: 15px;
+    opacity: 1;
 }
 a:hover{
-    
-    color: #787833;
+    opacity: 0.7;
 }
-.explicacao{
-    float: right;
-    width: 45%;
+.information{
+    
+    background-color: #ce5555;
+    position: relative;
+    margin-left: 700px; 
+    margin-right: 30px;   
+    text-align: center;
+    border-radius: 20px;
 }
 .imagens{
     
     margin-top: 10px;
     text-align: center;  
+    font-size: 35px;
 }
 .texto{
-    margin-right: 5px;
+    margin-right: 10px;
+    margin-left: auto;
     margin-top: 80px;
+    font-size: 20px;
+    text-align: center;
 }
