--- a/style.css
+++ b/style.css
@@ -94,10 +94,10 @@ a:hover{
     opacity: 0.7;
 }
 .information{
-    
+    height: 99vh;
     background-color: #ce5555;
     position: relative;
-    margin-left: 700px; 
+    margin-left: 850px; 
     margin-right: 30px;   
     text-align: center;
     border-radius: 20px;
@@ -109,8 +109,8 @@ a:hover{
     font-size: 35px;
 }
 .texto{
-    margin-right: 10px;
-    margin-left: auto;
+    margin-left: 5vh;
+    margin-right: 5vh;
     margin-top: 80px;
     font-size: 20px;
     text-align: center;
