--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ a:hover{
     margin-right: 30px;   
     text-align: center;
     border-radius: 20px;
+    box-shadow: 0 0 1rem rgb(0, 0, 0);
 }
 .imagens{
     
@@ -112,6 +113,8 @@ a:hover{
     margin-left: 5vh;
     margin-right: 5vh;
     margin-top: 80px;
+    font-family: Verdana, Tahoma, sans-serif;
     font-size: 20px;
     text-align: center;
+    color: #000000;
 }
